--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 distro==1.9.0
+faiss-cpu==1.8.0
 fastapi==0.109.2
 h11==0.14.0
 httpcore==1.0.4
 httptools==0.6.1
 httpx==0.27.0
 idna==3.6
+numpy==1.26.4
 openai==1.12.0
+packaging==24.0
 pydantic==2.6.1
 pydantic_core==2.16.2
 python-dotenv==1.0.1
